ride edit feature
